# talking-fellow

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: TECHNICAL.md  cleanup-guide.md  deployment-guide.md  saa-mapping.md  security-model.md  testing-guide.md
iam/: lambda-least-privilege-policy.json
infra/terraform/: apigateway.tf  dynamodb.tf  iam.tf  lambda.tf  lex.tf  main.tf  outputs.tf  s3.tf  sns.tf  terraform.tfvars.example  variables.tf  versions.tf  website.tf
lambda/fulfillment/: app.py
lex/: alias-locale-settings.json  intents-and-slots.md
scripts/: create_lex_alias.sh
web/: index.html
