[project]
name = "aws-multilingual-support-chatbot"
version = "0.1.0"
description = "AWS Lex multilingual support chatbot with Lambda fulfillment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "build",
  ".terraform",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
